--- a/public/css/style.css
+++ b/public/css/style.css
@@ -264,7 +264,7 @@ nav {
     justify-content: center;
     align-items: center;
     text-align: center;
-    box-shadow: 0px 40px 40px #391777;
+    box-shadow: 0px 15px 15px #391777;
 }
 
 .coin_items span{
@@ -671,15 +671,17 @@ nav {
     .numbers {
         padding: 10px;
     }
-
-    /* .number_details {
-        width: 300px;
-    } */
-
+    .number_details {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+   
     .number_details img {
         width: 50px;
         height: 50px;
         margin-right: 20px;
+        
     }
 
     .conts {
@@ -710,7 +712,12 @@ nav {
 }
 
 @media screen and (min-width: 360px){
-
+    .number_details {
+        /* width: 360px; */
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 }
 
 @media screen and (min-width: 768px) {
@@ -722,6 +729,8 @@ nav {
         color: white;
         border-radius: 32px;
     }
+
+    
 }
 
 @media screen  and (min-width: 1024px){
